FE-91: align fix

--- a/src/styles.less
+++ b/src/styles.less
@@ -45,6 +45,13 @@ button.btn-search-invoices {
     margin: 0;
 }
 
+.form-search-invoices {
+    text-align: right;
+    @media (max-width: 767px) {
+        text-align: left;
+    }
+}
+
 .form-inline .form-group {
     display: inline-block;
     margin-bottom: 0;
